name getting cut off at the bottom issue fixed

--- a/app/styles/campaign_create.less
+++ b/app/styles/campaign_create.less
@@ -2266,6 +2266,8 @@
                                 text-overflow: ellipsis;
                                 white-space: nowrap;
                                 width: auto;
+                                padding-bottom: 5px;
+                                margin-bottom: 5px;
                             }
 
                             //.pillsWrap {
